Blurr fix with backdrop filter

--- a/wwwroot/assets/styles/style.css
+++ b/wwwroot/assets/styles/style.css
@@ -98,9 +98,9 @@ hr.style14 {
     background-repeat: no-repeat!important;
     background-position: center!important;
     background-size: cover!important;
-    position: absolute;
-    left: 0px;
-    top: 0px;
+    position: fixed;
+    left: 0;
+    top:0;
     z-index: -1;
     width: 100%;
     height: 100%;
@@ -109,10 +109,20 @@ hr.style14 {
     -moz-transition: opacity 1s ease-in-out;
     -o-transition: opacity 1s ease-in-out;
     transition: opacity 1s ease-in-out;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    
 }
-.bg-image::after {
+
+.bg-image::before {
     content: "";
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    backdrop-filter: blur(3px);
 }
+
 .main-text {
     height: 70vh;
     align-items: center;
